ivfaster: per-cell coarse mapping, fromArray routing, bounded filtered probe